# crius

./: .gitignore  CRICTL_INTEGRATION_GAP_REPORT.md  Cargo.toml  PROJECT_STATUS.md  build.rs  build.sh  crius.service
src/: error.rs  lib.rs  main.rs
src/cgroups/: mod.rs
src/image/: layer.rs  mod.rs
src/metrics/: mod.rs
src/network/: cni.rs  error.rs  mod.rs  types.rs
src/nri/: adjust.rs  api.rs  convert.rs  domain.rs  manager.rs  merge.rs  mod.rs
src/oci/: mod.rs  spec.rs
src/pod/: mod.rs
src/proto/: mod.rs  runtime.v1.rs
src/runtime/: mod.rs  shim_manager.rs
src/server/: mod.rs
src/shim/: daemon.rs  io.rs  main.rs  mod.rs  process.rs  subreaper.rs
src/storage/: mod.rs  persistence.rs  volume.rs
src/streaming/: mod.rs
tests/: integration_test.rs  integration_tests.rs
